[gd_scene load_steps=5 format=3 uid="uid://d4cd2ha6wssyx"]

[ext_resource type="PackedScene" uid="uid://c4ihsnw5v1n3r" path="res://User Input/user_input.tscn" id="1_o6mkr"]
[ext_resource type="Script" uid="uid://c00dloj83svi" path="res://Level/level.gd" id="1_qmtf6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qmtf6"]
bg_color = Color(0.314316, 0.314316, 0.314316, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o6mkr"]

[node name="Level" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qmtf6")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HBoxContainer" type="HSplitContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
split_offset = 2090
dragging_enabled = false

[node name="VBoxContainer" type="VSplitContainer" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
dragging_enabled = false

[node name="Panel" type="Panel" parent="CanvasLayer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Input" type="PanelContainer" parent="CanvasLayer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qmtf6")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/HBoxContainer/VBoxContainer/Input"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="user_input" parent="CanvasLayer/HBoxContainer/VBoxContainer/Input/MarginContainer" instance=ExtResource("1_o6mkr")]
layout_mode = 2

[node name="Sidebar" type="PanelContainer" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/HBoxContainer/Sidebar"]
layout_mode = 2
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/HBoxContainer/Sidebar/VBoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="selected_img" type="Label" parent="CanvasLayer/HBoxContainer/Sidebar/VBoxContainer/MarginContainer"]
layout_mode = 2
text = "Selected Image:"
horizontal_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/HBoxContainer/Sidebar/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/HBoxContainer/Sidebar/VBoxContainer/MarginContainer2"]
layout_mode = 2
alignment = 1

[node name="r" type="Label" parent="CanvasLayer/HBoxContainer/Sidebar/VBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
text = "R:"

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/HBoxContainer/Sidebar/VBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_o6mkr")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/HBoxContainer/Sidebar/VBoxContainer/MarginContainer2/HBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="r_value" type="Label" parent="CanvasLayer/HBoxContainer/Sidebar/VBoxContainer/MarginContainer2/HBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
text = "255"

[node name="MarginContainer3" type="MarginContainer" parent="CanvasLayer/HBoxContainer/Sidebar/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/HBoxContainer/Sidebar/VBoxContainer/MarginContainer3"]
layout_mode = 2
alignment = 1

[node name="g" type="Label" parent="CanvasLayer/HBoxContainer/Sidebar/VBoxContainer/MarginContainer3/HBoxContainer"]
layout_mode = 2
text = "G:"

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/HBoxContainer/Sidebar/VBoxContainer/MarginContainer3/HBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_o6mkr")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/HBoxContainer/Sidebar/VBoxContainer/MarginContainer3/HBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="g_value" type="Label" parent="CanvasLayer/HBoxContainer/Sidebar/VBoxContainer/MarginContainer3/HBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
text = "143"

[node name="MarginContainer4" type="MarginContainer" parent="CanvasLayer/HBoxContainer/Sidebar/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/HBoxContainer/Sidebar/VBoxContainer/MarginContainer4"]
layout_mode = 2
alignment = 1

[node name="b" type="Label" parent="CanvasLayer/HBoxContainer/Sidebar/VBoxContainer/MarginContainer4/HBoxContainer"]
layout_mode = 2
text = "R:"

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/HBoxContainer/Sidebar/VBoxContainer/MarginContainer4/HBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_o6mkr")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/HBoxContainer/Sidebar/VBoxContainer/MarginContainer4/HBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="b_value" type="Label" parent="CanvasLayer/HBoxContainer/Sidebar/VBoxContainer/MarginContainer4/HBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
text = "199"
